# Simple-Schedule-Multiplatform

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: pages.yml
apps/api/: README.md
apps/ios/SimpleScheduleIOS/: SimpleScheduleIOSApp.swift
apps/ios/SimpleScheduleIOS.xcodeproj/: project.pbxproj
apps/ios/SimpleScheduleIOS/Models/: TaskItem.swift
apps/ios/SimpleScheduleIOS/Services/: SessionStorage.swift  SimpleScheduleModelContainer.swift  SupabaseClient.swift  SupabaseConfig.swift  TaskStore.swift
apps/ios/SimpleScheduleIOS/Views/: AddTaskView.swift  AuthView.swift  ContentView.swift  EditTaskView.swift  TaskRow.swift
apps/web/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: main.tsx  styles.css
apps/web/src/data/: localDb.ts  supabase.ts  tasks.ts
apps/web/src/ui/: App.tsx
apps/windows/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/windows/src/: styles.css
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: lib.rs  main.rs
apps/windows/src/data/: localDb.ts  supabase.ts  tasks.ts
docs/: architecture.md  cloud-postgres.md  codex-supabase-mcp.md  data-model.md  deployment.md  implementation-status.md  project-context-summary.md  pwa-architecture.md  pwa-product-design.md  sync-design.md
scripts/: generate-icons.ps1
supabase/: grants.sql  schema.sql  task-retention.sql  task-urgency.sql
(+1 files in other folders)
