[package]
name = "simple-schedule-windows"
version = "0.1.0"
description = "Native Windows desktop client for Simple Schedule"
authors = ["Simple Schedule"]
edition = "2021"

[lib]
name = "simple_schedule_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
